# Dou-dizhu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: card.rs  cardbufui.rs  cardui.rs  computer.rs  data.rs  lib.rs  main.rs
src/cards/: airplane.rs  bomb.rs  card.rs  mod.rs  pair.rs  pairchain.rs  solochain.rs  trio.rs  utils.rs
src/player/: computer.rs
src/ui/: cardbufui.rs  cardui.rs  mod.rs  selectui.rs
static/: index.html  styles.css
tests/: card.rs
